--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!-- PROJECT: CSC Adherence Timer — build1 baseline | v0.5-build1 | 2025-09-09 14:43:17 -->
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CSC Adherence Timer (v0.5-build1)</title>
+  <title>CSC Adherence Timer</title>
 
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="icon" href="favicon.ico" />
@@ -98,6 +97,7 @@
         <h2 id="settings-heading" class="sr-only">Settings</h2>
 
         <div id="settingsPanel">
+  <div class="setting-row version-row"><small>Version: <span id="app-version"></span></small></div>
           <div class="section-title">Profiles</div>
         <div class="form-grid">
             <div class="form-row">
@@ -339,3 +339,4 @@
   <script src="app.js" defer></script>
 </body>
 </html>
+
