--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="icon" href="favicon.ico" />
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
   <link rel="stylesheet" href="styles.css" />
 
   <!-- Icons + audio -->
