--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                      Upload button below triggers this input. -->
                 <input id="uploadSound" type="file" accept="audio/mp3" hidden aria-hidden="true" title="Select an MP3 file" />
                 <button id="uploadSoundBtn" type="button" title="Upload a custom .mp3">Upload…</button>
+                <select id="deleteSoundSelect" title="Select custom sound to delete"></select>
                 <button id="deleteSoundBtn" type="button" title="Delete selected custom sound">Delete</button>
               </div>
             </div>
