Update version to v0.5.4A; add update notes for hotfixes and improvements

--- a/index.html
+++ b/index.html
@@ -352,6 +352,12 @@
         <button class="modal-close" type="button" title="Close">&times;</button>
       </div>
       <div class="modal-body">
+        <h3>v0.5.4A</h3>
+        <ul>
+          <li>Hotfix for event editing modal functionality and countdown display</li>
+          <li>Improved time format handling for 12h and 24h inputs</li>
+          <li>GitHub repository: <a href="https://github.com/aeger/CSC-Timer" target="_blank" rel="noopener">https://github.com/aeger/CSC-Timer</a></li>
+        </ul>
         <h3>v0.5.4</h3>
         <ul>
           <li>Added Update Notes button in settings to view recent changes</li>
