--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="styles.css" />
 
   <!-- Icons + audio -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js" defer></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKCNfiIY/9oa42LT/iw==/sha512" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js" integrity="sha512-nzXjwAjJN6CLpcZroWrjO2Mh8Z+HDZY4Wj+8KJQxgk2FQ2C5smeO5F1l3f4WkT8+KJGqkzVxVz8I2BzT1q6z+w==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
   <script src="sfx.js" defer></script>
 </head>
 <body class="dark">
