Update to version 0.5.5: Add shift end sound option, enhance sound upload validation, improve JSON import validation, and enhance accessibility features.

--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
               <div class="control"><select id="over2Pattern" title="Select the sound to play for second overdue"></select> <button id="previewOver2" type="button" class="preview" title="Preview second overdue sound">▶︎</button></div>
             </div>
             <div class="form-row">
+              <label class="label" for="shiftEndPattern">Shift end</label>
+              <div class="control"><select id="shiftEndPattern" title="Select the sound to play when shift ends"></select> <button id="previewShiftEnd" type="button" class="preview" title="Preview shift end sound">▶︎</button></div>
+            </div>
+            <div class="form-row">
               <label class="label">Upload/Delete .mp3</label>
               <div class="control">
                 <!-- Hidden file input for custom audio uploads.  Marked as
