Update README and index.html for v0.5.5: Add shift end sound option, enhance sound upload validation, improve JSON import validation, add SRI hashes, enhance accessibility, and fix backup import bug.

--- a/index.html
+++ b/index.html
@@ -402,6 +402,15 @@
       </div>
       <div class="modal-body">
         <p>GitHub repository: <a href="https://github.com/aeger/CSC-Timer" target="_blank" rel="noopener">https://github.com/aeger/CSC-Timer</a></p>
+        <h3>v0.5.5</h3>
+        <ul>
+          <li>Added shift end sound option that plays when the shift ends (after last event)</li>
+          <li>Enhanced sound upload validation with file size limits and MIME type checking</li>
+          <li>Improved JSON import validation with better error handling</li>
+          <li>Added Subresource Integrity (SRI) hashes for external CDN resources</li>
+          <li>Enhanced accessibility with focus indicators for keyboard navigation</li>
+          <li>Fixed backup import bug with unknown keys filtering</li>
+        </ul>
         <h3>v0.5.4A</h3>
         <ul>
           <li>Hotfix for event editing modal functionality and countdown display</li>
